--- a/assets/css/EditableNodes.css
+++ b/assets/css/EditableNodes.css
@@ -1,17 +1,18 @@
 #editableNode svg{
-    border: 1px solid black;
-    /* background-color: rgb(78, 78, 78); */
+    /* border: 1px solid black; */
+    background-color: rgb(44, 44, 44);
 }
 
-/* #editableNode .node .caption{
-    font-family: "Consolas, 'Courier New', monospace";
-    font-size: 16px;
-    fill: rgb(12, 104, 157);
+
+#editableNode .node .caption{
+    font-family: arial, sans-serif;
+    font-size: 11px;
+    fill: rgb(255, 255, 255);
 
 }
 
 #editableNode .node .txtContainer{
-    stroke: aqua;
-    stroke-width: 1px;
-    fill: black;
-} */
+    stroke: rgb(0, 89, 255);
+    stroke-width: 2px;
+    fill: rgb(44, 44, 44);
+}
