シングルクリックでノード色変更

--- a/assets/css/EditableNodes.css
+++ b/assets/css/EditableNodes.css
@@ -16,3 +16,7 @@
     stroke-width: 2px;
     fill: rgb(44, 44, 44);
 }
+
+#editableNode .node .selectionLayer{
+    fill: rgba(40, 207, 96, 0.644);
+}
