ノード編集用ツールの為の<div>追加

--- a/assets/css/EditableNodes2.css
+++ b/assets/css/EditableNodes2.css
@@ -19,3 +19,7 @@
 #editableNode .node .selectionLayer{
     fill: rgba(40, 207, 96, 0.644);
 }
+
+#editableNode .nodeEditConsoleElem{
+    background-color: rgb(255, 255, 255);
+}
