--- a/assets/css/EditableNodes.css
+++ b/assets/css/EditableNodes.css
@@ -1,4 +1,6 @@
-#editableNode svg{
+/* <ユーザーが好みで変更する定義>------------------------------------------------------ */
+
+#editableNode .SVGForNodesMapping{
     /* border: 1px solid black; */
     background-color: rgb(44, 44, 44);
 }
@@ -21,5 +23,40 @@
 }
 
 #editableNode .nodeEditConsoleElem{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(167, 167, 167);
 }
+
+
+#editableNode .nodeEditConsoleElem .propertyEditor .selected{
+    background-color: rgba(0, 89, 255, 0.548);
+}
+
+#editableNode .nodeEditConsoleElem .propertyEditor .SVGicon{
+    stroke:black;
+}
+/* -----------------------------------------------------</ユーザーが好みで変更する定義> */
+
+/* <構造定義>------------------------------------------------------ */
+
+#editableNode .nodeEditConsoleElem .propertyEditor.textAnchor{
+    font-size:0;
+}
+
+#editableNode .nodeEditConsoleElem .propertyEditor .textAnchorType{
+    display: inline-block;
+    padding: 2px;
+}
+
+#editableNode .nodeEditConsoleElem .propertyEditor.fill .pickedColorText{
+    vertical-align: middle;
+
+    width:150px;
+    height:22px;
+
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(145, 118, 93);
+    padding:4px;
+}
+
+/* -----------------------------------------------------</構造定義> */
