--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -1,6 +1,6 @@
 <div class="EditableNodes_components">
 
-    <div class="propertyEditor textAnchor">
+    <div class="propertyEditor text_anchor">
         <div class="textAnchorType" data-textAnchorType="start" title="text-anhchor:start;">
             <svg class="SVGicon" width="18" height="18">
                 <line x1="2" y1="3" x2="16" y2="3" stroke-width="1"/>
@@ -25,11 +25,13 @@
                 <line x1="9" y1="15" x2="16" y2="15" stroke-width="1"/>
             </svg>
         </div>
+        <small class="message explicitness"></small>
     </div>
 
-    <div class="propertyEditor fill" title="fill:">
+    <div class="propertyEditor text_fill" title="fill:">
         <input type="text" class="picker" />
         <input type="text" class="pickedColorText" />
+        <small class="message explicitness"></small>
     </div>
 
 </div>
