--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -1,7 +1,7 @@
 <div class="EditableNodes_components">
 
     <div class="propertyEditor text_anchor">
-        <div class="textAnchorType" data-textAnchorType="start" title="text-anhchor:start;">
+        <div class="textAnchorType" data-text_anchor_type="start" title="text-anhchor:start;">
             <svg class="SVGicon" width="18" height="18">
                 <line x1="2" y1="3" x2="16" y2="3" stroke-width="1"/>
                 <line x1="2" y1="7" x2="9" y2="7" stroke-width="1"/>
@@ -9,7 +9,7 @@
                 <line x1="2" y1="15" x2="9" y2="15" stroke-width="1"/>
             </svg>
         </div>
-        <div class="textAnchorType" data-textAnchorType="middle" title="text-anhchor:middle;">
+        <div class="textAnchorType" data-text_anchor_type="middle" title="text-anhchor:middle;">
             <svg class="SVGicon" width="18" height="18">
                 <line x1="2" y1="3" x2="16" y2="3" stroke-width="1"/>
                 <line x1="5" y1="7" x2="13" y2="7" stroke-width="1"/>
@@ -17,7 +17,7 @@
                 <line x1="5" y1="15" x2="13" y2="15" stroke-width="1"/>
             </svg>
         </div>
-        <div class="textAnchorType" data-textAnchorType="end" title="text-anhchor:end;">
+        <div class="textAnchorType" data-text_anchor_type="end" title="text-anhchor:end;">
             <svg class="SVGicon" width="18" height="18">
                 <line x1="2" y1="3" x2="16" y2="3" stroke-width="1"/>
                 <line x1="9" y1="7" x2="16" y2="7" stroke-width="1"/>
