--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -1,6 +1,6 @@
-<div class="EditableNodes_components">
+<div>
 
-    <div class="propertyEditor text_anchor">
+    <div class="propertyEditor text_text_anchor">
         <div class="textAnchorType" data-text_anchor_type="start" title="text-anhchor:start;">
             <svg class="SVGicon" width="18" height="18">
                 <line x1="2" y1="3" x2="16" y2="3" stroke-width="1"/>
@@ -28,7 +28,7 @@
         <small class="message explicitness"></small>
     </div>
 
-    <div class="propertyEditor text_fill" title="fill:">
+    <div class="propertyEditor text_text_fill" title="fill:">
         <input type="text" class="picker" />
         <input type="text" class="pickedColorText" />
         <small class="message explicitness"></small>
