--- a/assets/css/EditableNodes.css
+++ b/assets/css/EditableNodes.css
@@ -1,6 +1,9 @@
 /* <ユーザーが好みで変更する定義>------------------------------------------------------ */
 
+
 #editableNode .SVGForNodesMapping{
+    width: 100%;
+    height: 800px;
     /* border: 1px solid black; */
     background-color: rgb(44, 44, 44);
 }
@@ -22,24 +25,24 @@
     fill: rgba(40, 207, 96, 0.644);
 }
 
-#editableNode .nodeEditConsoleElem{
+#editableNode .propertyEditConsole{
     background-color: rgb(167, 167, 167);
 }
 
 
-#editableNode .nodeEditConsoleElem .propertyEditor .selected{
+#editableNode .propertyEditConsole .propertyEditor .selected{
     background-color: rgba(0, 89, 255, 0.548);
 }
 
-#editableNode .nodeEditConsoleElem .propertyEditor .SVGicon{
+#editableNode .propertyEditConsole .propertyEditor .SVGicon{
     stroke:black;
 }
 
-#editableNode .historyElem{
+#editableNode .transactionHistory{
     background-color: rgb(160, 160, 160);
 }
 
-#editableNode .historyElem .selected{
+#editableNode .transactionHistory .selected{
     background-color: rgb(77, 74, 255);
 }
 
@@ -47,22 +50,22 @@
 
 /* <構造定義>------------------------------------------------------ */
 
-#editableNode .nodeEditConsoleElem .propertyEditor.text_anchor{
+#editableNode .propertyEditConsole .propertyEditor.text_text_anchor{
     font-size:0;
 }
 
-#editableNode .nodeEditConsoleElem .propertyEditor .textAnchorType{
+#editableNode .propertyEditConsole .propertyEditor .textAnchorType{
     display: inline-block;
     padding: 2px;
     cursor: pointer;
 }
 
-#editableNode .nodeEditConsoleElem .propertyEditor .message.explicitness{
+#editableNode .propertyEditConsole .propertyEditor .message.explicitness{
     font-size:small;
 }
 
 
-#editableNode .nodeEditConsoleElem .propertyEditor.fill .pickedColorText{
+#editableNode .propertyEditConsole .propertyEditor.text_text_fill .pickedColorText{
     vertical-align: middle;
 
     width:150px;
@@ -74,12 +77,12 @@
     padding:4px;
 }
 
-#editableNode .historyElem{
+#editableNode .transactionHistory{
     max-width: 200px;
     max-height: 300px;
 }
 
-#editableNode .historyElem .transaction{
+#editableNode .transactionHistory .transaction{
     padding: 3px 5px;
     cursor: pointer;
 }
