--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="propertyEditor text_text_fill" title="fill:">
-        <input type="text" class="picker" />
+        <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
         <input type="text" class="pickedColorText" />
         <small class="message explicitness"></small>
     </div>
