--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -34,4 +34,23 @@
         <small class="message explicitness"></small>
     </div>
 
+    <div class="propertyEditor text_frame_shape">
+        <div class="frameShapeType" data-frame_shape_type="rect" title="shape:rect;">
+            <svg class="SVGicon" width="18" height="18">
+                <rect x="3" y="5" width="14" height="10" stroke-width="1.5" fill-opacity="0" />
+            </svg>
+        </div>
+        <div class="frameShapeType" data-frame_shape_type="circle" title="shape:circle;">
+            <svg class="SVGicon" width="18" height="18">
+                <circle cx="9.5" cy="9.5" r="7" stroke-width="1.5" fill-opacity="0" />
+            </svg>
+        </div>
+        <div class="frameShapeType" data-frame_shape_type="ellipse" title="shape:ellipse;">
+            <svg class="SVGicon" width="18" height="18">
+                <ellipse cx="9.5" cy="9.5" rx="8" ry="5" stroke-width="1.5" fill-opacity="0" />
+            </svg>
+        </div>
+        <small class="message explicitness"></small>
+    </div>
+
 </div>
