--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -28,6 +28,11 @@
         <small class="message explicitness"></small>
     </div>
 
+    <div class="propertyEditor text_font_family" title="font-family:">
+        <input type="text" class="text_property" />
+        <small class="message explicitness"></small>
+    </div>
+
     <div class="propertyEditor text_text_fill" title="fill:">
         <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
         <input type="text" class="pickedColorText" />
