--- a/assets/css/EditableNodes.css
+++ b/assets/css/EditableNodes.css
@@ -60,6 +60,18 @@
     cursor: pointer;
 }
 
+#editableNode .propertyEditConsole .propertyEditor .text_property{
+    vertical-align: middle;
+
+    width:200px;
+    height:22px;
+
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(145, 118, 93);
+    padding:4px;
+}
+
 #editableNode .propertyEditConsole .propertyEditor .message.explicitness{
     font-size:small;
 }
