--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -33,6 +33,11 @@
         <small class="message explicitness"></small>
     </div>
 
+    <div class="propertyEditor text_font_size" title="font-size:">
+        <input type="number" class="number_property" />
+        <small class="message explicitness"></small>
+    </div>
+
     <div class="propertyEditor text_text_fill" title="fill:">
         <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
         <input type="text" class="pickedColorText" />
