--- a/assets/css/EditableNodes.css
+++ b/assets/css/EditableNodes.css
@@ -72,6 +72,18 @@
     padding:4px;
 }
 
+#editableNode .propertyEditConsole .propertyEditor .number_property{
+    vertical-align: middle;
+
+    width:50px;
+    height:22px;
+
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(145, 118, 93);
+    padding:4px;
+}
+
 #editableNode .propertyEditConsole .propertyEditor .message.explicitness{
     font-size:small;
 }
