--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -1,5 +1,6 @@
 <div>
 
+    <!-- text.text_anchor -->
     <div class="propertyEditor text_text_anchor">
         <div class="textAnchorType" data-text_anchor_type="start" title="text-anhchor:start;">
             <svg class="SVGicon" width="18" height="18">
@@ -28,22 +29,36 @@
         <small class="message explicitness"></small>
     </div>
 
+    <!-- text.text_font_family -->
     <div class="propertyEditor text_font_family" title="font-family:">
         <input type="text" class="text_property" />
         <small class="message explicitness"></small>
     </div>
 
+    <!-- text.text_font_size -->
     <div class="propertyEditor text_font_size" title="font-size:">
         <input type="number" class="number_property" />
         <small class="message explicitness"></small>
     </div>
 
+    <!-- text.text_fill -->
     <div class="propertyEditor text_text_fill" title="fill:">
         <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
         <input type="text" class="pickedColorText" />
         <small class="message explicitness"></small>
     </div>
 
+    <!-- text.text_font_weight -->
+    <div class="propertyEditor text_font_weight">
+        <div class="fontWeightType" data-font_weight_type="normal" title="font-weight:normal;">normal</div>
+        <div class="fontWeightType" data-font_weight_type="bold" title="font-weight:bold;"><b>bold</b></div>
+        <small class="message explicitness"></small>
+    </div>
+
+    <!-- text.text_font_style -->
+    <!-- text.text_decoration -->
+
+    <!-- text.frame_shape -->
     <div class="propertyEditor text_frame_shape">
         <div class="frameShapeType" data-frame_shape_type="rect" title="shape:rect;">
             <svg class="SVGicon" width="18" height="18">
@@ -62,5 +77,10 @@
         </div>
         <small class="message explicitness"></small>
     </div>
+
+    <!-- text.frame_stroke -->
+    <!-- text.frame_stroke_width -->
+    <!-- text.frame_stroke_dasharray -->
+    <!-- text.frame_fill -->
 
 </div>
