text_font_style用Property Editor

--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -56,6 +56,11 @@
     </div>
 
     <!-- text.text_font_style -->
+    <div class="propertyEditor text_font_style">
+        <div class="fontStyleType" data-font_style_type="normal" title="font-style:normal;">normal</div>
+        <div class="fontStyleType" data-font_style_type="italic" title="font-style:italic;"><i>italic</i></div>
+        <small class="message explicitness"></small>
+    </div>
     <!-- text.text_decoration -->
 
     <!-- text.frame_shape -->
