--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -45,6 +45,7 @@
     <div class="propertyEditor text_text_fill" title="fill:">
         <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
         <input type="text" class="pickedColorText" />
+        <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
 
