default化Buttonをfont_familyに適用

--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -26,18 +26,21 @@
                 <line x1="9" y1="15" x2="16" y2="15" stroke-width="1"/>
             </svg>
         </div>
+        <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
 
     <!-- text.text_font_family -->
     <div class="propertyEditor text_font_family" title="font-family:">
         <input type="text" class="text_property" />
+        <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
 
     <!-- text.text_font_size -->
     <div class="propertyEditor text_font_size" title="font-size:">
         <input type="number" class="number_property" />
+        <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
 
@@ -53,6 +56,7 @@
     <div class="propertyEditor text_font_weight">
         <div class="fontWeightType" data-font_weight_type="normal" title="font-weight:normal;">normal</div>
         <div class="fontWeightType" data-font_weight_type="bold" title="font-weight:bold;"><b>bold</b></div>
+        <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
 
@@ -60,6 +64,7 @@
     <div class="propertyEditor text_font_style">
         <div class="fontStyleType" data-font_style_type="normal" title="font-style:normal;">normal</div>
         <div class="fontStyleType" data-font_style_type="italic" title="font-style:italic;"><i>italic</i></div>
+        <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
     <!-- text.text_decoration -->
@@ -81,6 +86,7 @@
                 <ellipse cx="9.5" cy="9.5" rx="8" ry="5" stroke-width="1.5" fill-opacity="0" />
             </svg>
         </div>
+        <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
 
