text-decoration用Property Editor

--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -67,7 +67,13 @@
         <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
+
     <!-- text.text_decoration -->
+    <div class="propertyEditor text_text_decoration" title="text-decoration:">
+        <input type="text" class="text_property" />
+        <button class="setAsDefault" type="button" title="set as default">default</button>
+        <small class="message explicitness"></small>
+    </div>
 
     <!-- text.frame_shape -->
     <div class="propertyEditor text_frame_shape">
