frame_stroke用Property Editor

--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -97,6 +97,13 @@
     </div>
 
     <!-- text.frame_stroke -->
+    <div class="propertyEditor frame_stroke" title="stroke:">
+        <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
+        <input type="text" class="pickedColorText" />
+        <button class="setAsDefault" type="button" title="set as default">default</button>
+        <small class="message explicitness"></small>
+    </div>
+
     <!-- text.frame_stroke_width -->
     <!-- text.frame_stroke_dasharray -->
     <!-- text.frame_fill -->
