frame_stroke_dasharray用Property Editor

--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -105,7 +105,19 @@
     </div>
 
     <!-- text.frame_stroke_width -->
+    <div class="propertyEditor frame_stroke_width" title="stroke-width:">
+        <input type="number" class="number_property" />
+        <button class="setAsDefault" type="button" title="set as default">default</button>
+        <small class="message explicitness"></small>
+    </div>
+
     <!-- text.frame_stroke_dasharray -->
+    <div class="propertyEditor frame_stroke_dasharray" title="stroke-dasharray:">
+        <input type="text" class="text_property" />
+        <button class="setAsDefault" type="button" title="set as default">default</button>
+        <small class="message explicitness"></small>
+    </div>
+
     <!-- text.frame_fill -->
 
 </div>
