frame_fill用Property Editor

--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -119,5 +119,11 @@
     </div>
 
     <!-- text.frame_fill -->
+    <div class="propertyEditor frame_fill" title="fill:">
+        <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
+        <input type="text" class="pickedColorText" />
+        <button class="setAsDefault" type="button" title="set as default">default</button>
+        <small class="message explicitness"></small>
+    </div>
 
 </div>
