全部defaultする機能

--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -126,4 +126,8 @@
         <small class="message explicitness"></small>
     </div>
 
+    <div class="propertyEditor all">
+        <button class="setAsDefault" type="button" title="set as default (all)">default (All)</button>
+    </div>
+    
 </div>
