--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -1,5 +1,7 @@
 <div>
 
+    <div class="description">text</div>
+
     <!-- text.text_anchor -->
     <div class="propertyEditor text_text_anchor">
         <div class="textAnchorType" data-text_anchor_type="start" title="text-anhchor:start;">
@@ -30,13 +32,6 @@
         <small class="message explicitness"></small>
     </div>
 
-    <!-- text.text_font_family -->
-    <div class="propertyEditor text_font_family" title="font-family:">
-        <input type="text" class="text_property" />
-        <button class="setAsDefault" type="button" title="set as default">default</button>
-        <small class="message explicitness"></small>
-    </div>
-
     <!-- text.text_font_size -->
     <div class="propertyEditor text_font_size" title="font-size:">
         <input type="number" class="number_property" />
@@ -48,6 +43,13 @@
     <div class="propertyEditor text_text_fill" title="fill:">
         <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
         <input type="text" class="pickedColorText" />
+        <button class="setAsDefault" type="button" title="set as default">default</button>
+        <small class="message explicitness"></small>
+    </div>
+
+    <!-- text.text_font_family -->
+    <div class="propertyEditor text_font_family" title="font-family:">
+        <input type="text" class="text_property" />
         <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
@@ -75,6 +77,8 @@
         <small class="message explicitness"></small>
     </div>
 
+    <div class="description">frame</div>
+
     <!-- text.frame_shape -->
     <div class="propertyEditor text_frame_shape">
         <div class="frameShapeType" data-frame_shape_type="rect" title="shape:rect;">
@@ -96,13 +100,15 @@
         <small class="message explicitness"></small>
     </div>
 
-    <!-- text.frame_stroke -->
-    <div class="propertyEditor frame_stroke" title="stroke:">
+    <!-- text.frame_fill -->
+    <div class="propertyEditor frame_fill" title="fill:">
         <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
         <input type="text" class="pickedColorText" />
         <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
+
+    <div class="description">frame border</div>
 
     <!-- text.frame_stroke_width -->
     <div class="propertyEditor frame_stroke_width" title="stroke-width:">
@@ -111,17 +117,17 @@
         <small class="message explicitness"></small>
     </div>
 
-    <!-- text.frame_stroke_dasharray -->
-    <div class="propertyEditor frame_stroke_dasharray" title="stroke-dasharray:">
-        <input type="text" class="text_property" />
+    <!-- text.frame_stroke -->
+    <div class="propertyEditor frame_stroke" title="stroke:">
+        <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
+        <input type="text" class="pickedColorText" />
         <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
 
-    <!-- text.frame_fill -->
-    <div class="propertyEditor frame_fill" title="fill:">
-        <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
-        <input type="text" class="pickedColorText" />
+    <!-- text.frame_stroke_dasharray -->
+    <div class="propertyEditor frame_stroke_dasharray" title="stroke-dasharray:">
+        <input type="text" class="text_property" />
         <button class="setAsDefault" type="button" title="set as default">default</button>
         <small class="message explicitness"></small>
     </div>
