--- a/assets/css/EditableNodes.css
+++ b/assets/css/EditableNodes.css
@@ -51,6 +51,15 @@
 
 /* <構造定義>------------------------------------------------------ */
 
+#editableNode .propertyEditConsole .description{
+    font-size:medium;
+    padding: 3px 5px;
+}
+
+#editableNode .propertyEditConsole .propertyEditor{
+    padding: 0px 5px;
+}
+
 /* div要素リストを横並びにする為に設定する */
 #editableNode .propertyEditConsole .propertyEditor.text_text_anchor,
 .text_frame_shape,
@@ -113,6 +122,10 @@
     border-width: 1px;
     border-color: rgb(145, 118, 93);
     padding:4px;
+}
+
+#editableNode .propertyEditConsole .propertyEditor.all{
+    padding: 10px 10px;
 }
 
 #editableNode .propertyEditConsole .propertyEditor button{
