--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -136,7 +136,7 @@
             <small class="message explicitness"></small>
         </div>
 
-        <div class="propertyEditor all">
+        <div class="propertyEditor all node">
             <button class="setAsDefault" type="button" title="set as default (all)">default (All)</button>
         </div>
 
@@ -147,6 +147,48 @@
         <div class="description">Link</div>
 
         <div class="description">line</div>
+
+        <!-- line.stroke -->
+        <div class="propertyEditor stroke" title="fill:">
+            <input type="text" class="picker" /> <!-- spectrum を登録するための Element -->
+            <input type="text" class="pickedColorText" />
+            <button class="setAsDefault" type="button" title="set as default">default</button>
+            <small class="message explicitness"></small>
+        </div>
+
+        <!-- line.stroke_width -->
+        <div class="propertyEditor stroke_width" title="stroke-width:">
+            <input type="number" class="number_property" />
+            <button class="setAsDefault" type="button" title="set as default">default</button>
+            <small class="message explicitness"></small>
+        </div>
+
+        <!-- line.marker_end -->
+        <div class="propertyEditor marker_end">
+            <div class="frameShapeType" data-frame_shape_type="rect" title="marker-end:none;">
+                <svg class="SVGicon" width="18" height="18">
+                    <rect x="3" y="5" width="14" height="10" stroke-width="1.5" fill-opacity="0" />
+                </svg>
+            </div>
+            <div class="frameShapeType" data-frame_shape_type="circle" title="marker-end:`url(\"#arrow1\");`">
+                <svg class="SVGicon" width="18" height="18">
+                    <circle cx="9.5" cy="9.5" r="7" stroke-width="1.5" fill-opacity="0" />
+                </svg>
+            </div>
+            <button class="setAsDefault" type="button" title="set as default">default</button>
+            <small class="message explicitness"></small>
+        </div>
+
+        <!-- line.stroke_dasharray -->
+        <div class="propertyEditor stroke_dasharray" title="stroke-dasharray:">
+            <input type="text" class="text_property" />
+            <button class="setAsDefault" type="button" title="set as default">default</button>
+            <small class="message explicitness"></small>
+        </div>
+
+        <div class="propertyEditor all link">
+            <button class="setAsDefault" type="button" title="set as default (all)">default (All)</button>
+        </div>
 
     </div>
     
