marker_end用Property Editor の挙動修正

--- a/assets/css/EditableNodes.css
+++ b/assets/css/EditableNodes.css
@@ -75,7 +75,8 @@
 }
 
 #editableNode .propertyEditConsole .propertyEditor .textAnchorType,
-.frameShapeType{
+.frameShapeType,
+.arrowType{
     display: inline-block;
     padding: 2px;
     cursor: pointer;
