--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -165,14 +165,15 @@
 
         <!-- line.marker_end -->
         <div class="propertyEditor marker_end">
-            <div class="frameShapeType" data-frame_shape_type="rect" title="marker-end:none;">
+            <div class="arrowType" data-arrow_type="none" title="marker-end:none;">
                 <svg class="SVGicon" width="18" height="18">
-                    <rect x="3" y="5" width="14" height="10" stroke-width="1.5" fill-opacity="0" />
+                    <line x1="2" y1="2" x2="16" y2="16" stroke-width="1.5" fill-opacity="0" />
                 </svg>
             </div>
-            <div class="frameShapeType" data-frame_shape_type="circle" title="marker-end:`url(\"#arrow1\");`">
+            <div class="arrowType" data-arrow_type="arrow1" title="marker-end:`url(\"#arrow1\");`">
                 <svg class="SVGicon" width="18" height="18">
-                    <circle cx="9.5" cy="9.5" r="7" stroke-width="1.5" fill-opacity="0" />
+                    <line x1="2" y1="2" x2="16" y2="16" stroke-width="1.5" fill-opacity="0" />
+                    <path d="M2,2 L16,7 L7,16 Z" fill="rgb(0, 0, 0)" fill-opacity="1" />
                 </svg>
             </div>
             <button class="setAsDefault" type="button" title="set as default">default</button>
