--- a/assets/components/EditableNodes_components.html
+++ b/assets/components/EditableNodes_components.html
@@ -170,7 +170,7 @@
                     <line x1="2" y1="2" x2="16" y2="16" stroke-width="1.5" fill-opacity="0" />
                 </svg>
             </div>
-            <div class="arrowType" data-arrow_type="arrow1" title="marker-end:`url(\"#arrow1\");`">
+            <div class="arrowType" data-arrow_type="arrow1" title="marker-end:`url('#arrow1');`">
                 <svg class="SVGicon" width="18" height="18">
                     <line x1="2" y1="2" x2="16" y2="16" stroke-width="1.5" fill-opacity="0" />
                     <path d="M2,2 L16,7 L7,16 Z" fill="rgb(0, 0, 0)" fill-opacity="1" />
